WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132472
Fix several memory leaks found by code inspection
https://bugs.webkit.org/show_bug.cgi?id=132472
Summary
Fix several memory leaks found by code inspection
Simon Fraser (smfr)
Reported
2014-05-02 10:56:35 PDT
Fix several memory leaks found by code inspection
Attachments
Patch
(4.29 KB, patch)
2014-05-02 10:57 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2014-05-02 10:57:08 PDT
Created
attachment 230674
[details]
Patch
Simon Fraser (smfr)
Comment 2
2014-05-02 10:57:56 PDT
I searched for: RetainPtr<.+>.+= \[.+alloc RetainPtr<.+>.+= [^a].+create RetainPtr<.+>.+= [^a].+copy and looked for leaks, and found a few.
Geoffrey Garen
Comment 3
2014-05-02 11:09:52 PDT
Comment on
attachment 230674
[details]
Patch r=me
WebKit Commit Bot
Comment 4
2014-05-02 11:47:22 PDT
Comment on
attachment 230674
[details]
Patch Clearing flags on attachment: 230674 Committed
r168177
: <
http://trac.webkit.org/changeset/168177
>
WebKit Commit Bot
Comment 5
2014-05-02 11:47:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug