Fix several memory leaks found by code inspection https://bugs.webkit.org/show_bug.cgi?id=132472

Reviewed by Geoffrey Garen.

Fix memory leaks.

* TestWebKitAPI/Tests/mac/WillSendSubmitEvent.mm:
(TestWebKitAPI::TEST):
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::willSendRequestForFrame):
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::changeWindowScaleIfNeeded):


Canonical link: https://commits.webkit.org/150508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168177 268f45cc-cd09-0410-ab3c-d52691b4dbfc